# gtmhackathon

./: .cursorignore  .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .mcp.json  DEMO_SCRIPT.md  Dockerfile  HANDOVER.md  Makefile  README.md  SUBMISSION.md  __init__.py  docker-compose.yml  firebase.json  firestore.rules  generate_conference_sheets.py  generate_event_sheets.py  pyproject.toml  storage.rules  warmth-architecture-v2.md  warmth-architecture.md  warmth-integrated-architecture.md  warmth-ios-architecture.md  warmth-ios-technical-architecture.md  warmth_event_demo.xlsx
.cursor/: mcp.json
.cursor/rules/: glassmorphism-design.mdc  ios-device-preview.mdc
.github/scripts/: resolve_merge_conflicts.py
.github/workflows/: auto-resolve-and-approve.yml  test.yml
apps/agent/: conference_pipeline.py  event_pipeline.py  meet_pipeline.py
apps/api/: deps.py  graph_builder.py  integration_helpers.py  interest_helpers.py  main.py  persisted_store.py  store.py  user_context.py
apps/lifecycle/: community_matcher.py  contact_sync.py  meet.py  onboarding.py  postmeet.py  premeet.py  signal_ingest.py  user_bootstrap.py
apps/listener/: engine.py  main.py
data/: gtm_hackathon_attendees.json
docs/: GMAIL_MCP.md  Warmth-Architecture-Reference.html  Warmth-Stakeholder-Overview.html  build_architecture_pdf.py  build_stakeholder_pdf.py
docs/confluence/: warmth-architecture-complete.html  warmth-product-overview.md
docs/diagrams/: actor-sequence.mmd  backend-signal-ingest.mmd  integration-map.mmd  ios-app-shell.mmd  ios-capture-flow.mmd  ml-routing.mmd  user-journey.mmd  (+13 more)
drafts/: draft_20260620T142201641300.json  draft_20260620T142201641461.json  draft_20260620T142201641559.json  draft_20260620T142201641649.json  draft_20260620T142201641741.json  draft_20260620T142218745055.json  draft_20260620T142218745304.json  draft_20260620T142218745654.json  draft_20260620T142218746116.json  draft_20260620T142218746539.json  draft_20260620T142218746910.json  draft_20260620T142218747174.json  draft_20260620T142218747291.json  draft_20260620T142218747387.json  draft_20260620T142218747477.json  draft_20260620T142545166121.json  draft_20260620T144600213048.json  draft_20260620T144608431562.json  draft_20260620T145230370590.json  draft_20260620T145310575463.json  draft_20260620T145351615430.json  draft_20260620T145351615575.json  draft_20260620T145351615681.json  draft_20260620T145351615768.json  draft_20260620T145351615850.json  draft_20260620T152420638920.json  draft_20260620T152420639695.json  draft_20260620T152420640043.json  draft_20260620T152420640313.json  draft_20260620T152420640572.json  draft_20260620T152508371080.json  draft_20260620T152508372627.json  draft_20260620T152508372936.json  draft_20260620T152508373155.json  draft_20260620T152508373336.json  draft_20260620T152540091122.json  draft_20260620T152540091646.json  draft_20260620T152540091862.json  draft_20260620T152540092061.json  draft_20260620T152540092234.json  (+51 more)
infra/: cloudrun-env.yaml
scripts/: crop_lightfern.py  demo_person_context.py  deploy_cloud_run.sh  docker_smoke_test.sh  e2e_api_server.py  e2e_smoke.py  hubspot_contacts.json  import_contacts_to_hubspot.py  migrate_user_demo_to_firestore.py  run_api_local.py  run_dev_api.py  run_gtm_hackathon_demo.py  run_gtm_hackathon_pull.py  run_premeet_e2e.py  secrets_sync.py  serve_meet_local.py  setup_gmail_oauth.py  test_gmail_mcp_draft.py  test_mic_pipeline.py  test_tavily_pipeline.py
services/: __init__.py
tests/: conftest.py
web/: .env.example  .env.production.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
(+250 files in other folders)
